add readcard and readallcard endpoints
